2010-08-14  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (Fcurrent_bidi_paragraph_direction): Fix paragraph
	direction when point is inside a run of whitespace characters.

	* bidi.c (bidi_at_paragraph_end): Remove obsolete comment.

2010-08-14  Jason Rumney  <jasonr@gnu.org>

	* keyboard.c (lispy_function_keys): Do not define VK_PACKET (bug#4836)

2010-08-14  Chong Yidong  <cyd@stupidchicken.com>

	* fns.c (Fmake_hash_table): Doc fix (Bug#6851).

2010-08-13  Jason Rumney  <jasonr@gnu.org>

	* w32menu.c (simple_dialog_show): Use unicode message box if available.
	(MessageBoxW_Proc): New function typedef.
	(unicode-message-box): New function pointer.
	(globals_of_w32menu): Import it from user32.dll. (Bug#5629)

2010-08-13  Jan Djärv  <jan.h.d@swipnet.se>

	* frame.h (Qtool_bar_position): Declare.

	* xfns.c (Fx_create_frame): Call x_default_parameter for
	Qtool_bar_position.

2010-08-13  Eli Zaretskii  <eliz@gnu.org>

	* unexcoff.c: Remove the parts used when "emacs" is not defined.
	(report_error, report_error_1): Ditto.
	(write_segment): Remove "#if 0" unused code.
	(make_hdr): Remove code that was "#ifndef NO_REMAP" before
	NO_REMAP was removed (in revno 100928).
	(start_of_text): Remove unused function (was used only if NO_REMAP
	was NOT defined).

	* msdos.c (IT_set_face): Fix format string to match argument
	types.
	(IT_write_glyphs, IT_note_mode_line_highlight)
	(IT_set_frame_parameters): Remove unused variables.
	(x_set_menu_bar_lines): Declare set_menu_bar_lines.
	(IT_set_terminal_modes): Disambiguate expression in if clause.
	(Fmsdos_remember_default_colors): Return Qnil.
	(IT_set_frame_parameters): Add parens to disambiguate boolean
	expression for logging the cursor type to termscript.
	(keyboard_layout_list, keypad_translate_map)
	(grey_key_translate_map): Add braces in inner initializers.
	(dos_rawgetc): Add parens in condition for mouse-3 button-press.
	(dos_rawgetc): Remove unused label.
	(XMenuActivate): Add braces to remove ambiguous `else'.